[project]
name = "ComfyUI_API_Request"
description = "Comfyui SD-API API/NOVEL AI request node, support nai3/nai4"
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = ["python-dotenv"]

[project.urls]
Repository = "https://github.com/DiaoDaiaChan/ComfyUI_API_Request"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "diaodaiachan"
DisplayName = "ComfyUI_NovelAI_API_Request"
Icon = ""
